--- a/packages/layerzero-package/catalog-info.yaml
+++ b/packages/layerzero-package/catalog-info.yaml
@@ -7,7 +7,7 @@ metadata:
     github.com/project-slug: LZeroAnalytics/layerzero-package
     backstage.io/view-url:    https://github.com/LZeroAnalytics/layerzero-package
 spec:
-  type: library
+  type: Cross-chain
   lifecycle: production
   owner: bloctopus
   dependsOn:
