--- a/packages/cosmos-package/catalog-info.yaml
+++ b/packages/cosmos-package/catalog-info.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     github.com/project-slug: LZeroAnalytics/cosmos-package
     backstage.io/view-url:    https://github.com/LZeroAnalytics/cosmos-package
+    backstage.io/techdocs-ref: url:https://github.com/LZeroAnalytics/cosmos-package/blob/master/README.md
 spec:
   type: Layer 1
   lifecycle: production
