--- a/packages/ethereum-package/catalog-info.yaml
+++ b/packages/ethereum-package/catalog-info.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     github.com/project-slug: ethpandaops/ethereum-package
     backstage.io/view-url:    https://github.com/ethpandaops/ethereum-package
+    backstage.io/techdocs-ref: url:https://github.com/ethpandaops/ethereum-package/blob/master/README.md
 spec:
   type: Layer 1
   lifecycle: production
