--- a/packages/uniswap-package/catalog-info.yaml
+++ b/packages/uniswap-package/catalog-info.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     github.com/project-slug: LZeroAnalytics/uniswap-package
     backstage.io/view-url:    https://github.com/LZeroAnalytics/uniswap-package
+    backstage.io/techdocs-ref: url:https://github.com/LZeroAnalytics/uniswap-package/blob/master/README.md
 spec:
   type: DeFi
   lifecycle: production
